# monopoly

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/mechanics/: CMakeLists.txt  Dice.cpp  Dice.hpp
src/mechanics/tests/: CMakeLists.txt  DiceTest.cpp
src/players/: CMakeLists.txt  User.cpp  User.hpp
src/players/tests/: CMakeLists.txt  UserTest.cpp
